--- a/config/kernel_2.yaml
+++ b/config/kernel_2.yaml
@@ -13,47 +13,47 @@
 #   limitations under the License.
 
 ##################################################################################################
-# kernel_2 service
+# kernel2 service
 ##################################################################################################
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: kernel_2
+  name: kernel2
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kernel_2
+  name: kernel2
   labels:
-    app: kernel_2
+    app: kernel2
 spec:
   ports:
     - name: http
       port: 8002
       targetPort: 82
   selector:
-    app: kernel_2
+    app: kernel2
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kernel_2
+  name: kernel2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kernel_2
+      app: kernel2
       version: v1
   template:
     metadata:
       labels:
-        app: kernel_2
+        app: kernel2
         version: v1
     spec:
-      serviceAccountName: kernel_2
+      serviceAccountName: kernel2
       containers:
         - image: docker.io/yonghao/iam-poc
           imagePullPolicy: IfNotPresent
-          name: kernel_2
+          name: kernel2
           ports:
             - containerPort: 82
