--- a/config/core.yaml
+++ b/config/core.yaml
@@ -30,7 +30,8 @@ spec:
   ports:
     - name: http
       port: 8000
-      targetPort: 80
+      # Target port matching what port our flask runs on docker.
+      targetPort: 5000
   selector:
     app: coreapp
 ---
@@ -55,5 +56,3 @@ spec:
         - image: docker.io/yonghao/iam-poc
           imagePullPolicy: IfNotPresent
           name: coreapp
-          ports:
-            - containerPort: 80
