--- a/config/istio_gateway.yaml
+++ b/config/istio_gateway.yaml
@@ -30,4 +30,4 @@ spec:
         - destination:
             port:
               number: 8000
-            host: coreapp
+            host: coreapp.default.svc.cluster.local
