--- a/config/istio_gateway.yaml
+++ b/config/istio_gateway.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
   name: poc-gateway
+  namespace: dev
 spec:
   selector:
     istio: ingressgateway # use Istio default gateway implementation
@@ -17,17 +18,15 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: coreapp
+  namespace: dev
 spec:
   hosts:
     - "*"
   gateways:
     - poc-gateway
   http:
-    - match:
-        - uri:
-            prefix: /core
-      route:
+    - route:
         - destination:
             port:
               number: 8000
-            host: coreapp.default.svc.cluster.local
+            host: coreapp.dev.svc.cluster.local
