--- a/config/applayer_policy.yaml
+++ b/config/applayer_policy.yaml
@@ -2,10 +2,10 @@
 apiVersion: "authentication.istio.io/v1alpha1"
 kind: "Policy"
 metadata:
-  name: "jwt-example"
+  name: "app-layer-jwt"
 spec:
   targets:
-    - name: coreapp
+    - name: applayer-policy
   origins:
     - jwt:
         issuer: "https://ic-dot-dogeictest.appspot.com/"
